[project]
name = "learning-litestar"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "litestar[standard,sqlalchemy,jwt]>=2.12.1",
    "pwdlib[argon2]>=0.2.1",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "T", "ERA"]